More changes as a result of Inge's comments

--- a/index/03-chap3.Rmd
+++ b/index/03-chap3.Rmd
@@ -71,23 +71,23 @@ Isolated PRP was diluted 1:40 in HEPES Tyrode's. FITC-conjugated PAC1 and PE-con
 Diluted PRP (1:40) was used for unstimulated surface receptor detection. Antibodies were added (1:10 v/v) to a final volume of 50 uL. Antibodies used include anti-human CD41 (α~IIb~), CD42b (GP1bα), CD61 (β~3~) (FITC-conjugated) and GPVI and CD110 (thrombopoietin/TPO receptor) (PE-conjugated). Platelets were fixed with 1% PFA for 10 minutes. Platelets were gated and the MFI was reported in AUs from a total of 10,000 events. 
 
 #### Platelet-neutrophil assay measured by flow cytometry
-Citrated whole blood was diluted 1:10 in HEPES-Tyrode's buffer and incubated with FITC-conjugated anti-CD41 and PE-conjugated anti-C45 antibodies at room temperature for 15 mins. Samples were either stimulated (+ 5 ug/mL CRP) or unstimulated (+ vehicle). Samples were fixed with FixLyse for 10 minutes, followed by 4 % PFA for 10 minutes. Fluorescence was quantified using the flow cytometer, where 1000 neutrophil events were analysed based on a gating of CD45 and SSC parameters. Aggregates of platelets and neutrophils were defined by being both CD41+ and CD45+.
+Citrated whole blood was diluted 1:10 in HEPES-Tyrode's buffer and incubated with FITC-conjugated anti-CD41 and PE-conjugated anti-C45 antibodies at room temperature for 15 mins (antibodies used 1:10 v/v). Samples were either stimulated (+ 5 ug/mL CRP) or unstimulated (+ vehicle) for the same 15 minute duration. Samples were fixed with FixLyse for 10 minutes, followed by a final concentration of 4 % PFA for 10 minutes. Fluorescence was quantified using the flow cytometer, where 1000 neutrophil events were analysed based on a gating of CD45 and SSC parameters. Aggregates of platelets and neutrophils were defined by being both CD41+ and CD45+.
 
 #### Tandem Mass Tag Mass Spectrometry (TMT-MS) quantification of platelet proteins
-Platelet lysate samples (50 ug total protein) were digested with trypsin and labelled with TMT 15 plex reagents (Thermo Fisher Scientific, Loughborough, UK). Labelled samples were pooled. The pooled sample was evaporated to dryness then resuspended in formic acid (5%). The pooled sample was then desalted using a SepPak cartridge (Waters, Milford, Massachussetts, USA). Eluate from the SepPak cartridge was evaporated to dryness and resuspended prior to fractionation by high pH reversed-phase chromatography using an Ultimate 3000 liquid chromatography system (Thermo Fisher Scientific). Further fractionation occurred using high pH RP fractions using the Ulitamte 3000 nano-LC system in line with an Orbitrap Fusion Tribrid Mass Spectrometer (Thermo Fisher Scientific).
+Platelet lysate samples (50 ug total protein) were digested with trypsin and labelled with TMT 15 plex reagents (ThermoFisher Scientific, Loughborough, UK). Labelled samples were pooled. The pooled sample was evaporated to dryness then resuspended in formic acid (5%). The pooled sample was then desalted using a SepPak cartridge (Waters, Milford, Massachussetts, USA). Eluate from the SepPak cartridge was evaporated to dryness and resuspended prior to fractionation by high pH reversed-phase chromatography using an Ultimate 3000 liquid chromatography system (Thermo Fisher Scientific). Further fractionation occurred using high pH RP fractions using the Ulitamte 3000 nano-LC system in line with an Orbitrap Fusion Tribrid Mass Spectrometer (ThermoFisher Scientific).
 
 #### Analysis of proteomic data
-A principal component analysis (PCA) was performed to reduce the data and to identify major axes (principal componenents, PCs). This method helps to determine whether the major axes of the data can likely be explained by the group (bariatric patient with obesity or control participant). Normalised protein abundances were log~2~ transformed, where the logFC was calculated by subtracting the log2 normalised protein abundance of the control subjects from the bariatric surgery group. The log~2~ normalised protein abundances of bariatric patients were compared to controls using a two-tailed unpaired t-test. P values were not adjusted for multiple testing, however P values of all comparisons provided in full. False discovery rate (FDR) adjusted p-values are also provided in the full results. A positive logFC indicates an increase in protein level in the bariatric samples.
+A principal component analysis (PCA) was performed to reduce the data and to identify major axes (principal components, PCs). This method helps to determine whether the major axes of the data can likely be explained by the group (bariatric patient with obesity or control participant). Normalised protein abundances were log~2~ transformed, where the logFC was calculated by subtracting the log2 normalised protein abundance of the control subjects from the bariatric surgery group. The log~2~ normalised protein abundances of bariatric patients were compared to controls using a two-tailed unpaired t-test. P values were not adjusted for multiple testing, however P values of all comparisons are provided in the supplementary results in Chapter \@ref(BMI-platelets-clinic). False discovery rate (FDR) adjusted p-values are also provided in the full results . A positive logFC indicates an increase in protein level in the bariatric samples.
 
 #### Ingenuity pathway analysis enrichment
 Enrichment analyses were performed using the Ingenuity Pathway Analysis (IPA) bioinformatics tool (QIAGEN Inc., https://www.qiagenbioinformatics.com/products/ingenuitypathway-analysis) to determine whether proteins altered in bariatric patients with obesity showed enrichment in canonical pathways or diseases compared to the full protein list. IPA utilises the directionality of the change in protein, allowing interpretation of the likely activation or inhibition of the associated pathways. This is expressed as a Z-score. Proteins LogFCs which match the expected pattern of LogFCs contribute to a positive Z-score, and those which disagree contribute to a negative z-score.
 
 ### Platelet priming experiments
 #### Isolation of human platelets
-Fresh human venous blood was obtained from healthy volunteers by venipuncture. Blood was taken into the syringe with a 1 in 10 volume of 4 % trisodium citrate, then mixed with a 1 in 7 volume of acid citrate dextrose (ACD). Blood was placed into 5 mL LP4 tubes then centrifuged at 1000 revolutions per minute (RPM) for 17 minutes. Platelet rich plasma (PRP) was extracted. PRP was supplemented with inhibitors such as 0.02 U/mL apyrase, 140 nM PGE1 or 10 µM indomethacin. Supplemented PRP was either used for the experiment of centrifuged for a further 10 minutes at 1700 RPM. Platelet poor plasma (PPP) was removed leaving a platelet pellet. This pellet was resuspended in HEPES Tyrode’s (supplemented with 0.1 % glucose and 0.02 U/mL apyrase, and 10 µM indomethacin if already applied to PRP). Platelets were counted using a Z1 coulter particle counter by diluting 1 in 2000 in 10 mL MQ water. Platelets were diluted further using the supplemented HEPES Tyrode’s to a platelet concentration of 4 x 10^8^/mL and left to rest for 30 mins in a 30°C water bath.
+Fresh human venous blood was obtained from healthy volunteers by venipuncture. Blood was taken into the syringe with a 1 in 10 volume of 4 % trisodium citrate, then mixed with a 1 in 7 volume of acid citrate dextrose (ACD). Blood was placed into 5 mL LP4 tubes then centrifuged at 1000 revolutions per minute (RPM) for 17 minutes. Platelet rich plasma (PRP) was removed. PRP was supplemented with inhibitors such as 0.02 U/mL apyrase, 140 nM PGE1 or 10 µM indomethacin. Supplemented PRP was either used for the experiment or centrifuged for a further 10 minutes at 1700 RPM. Platelet poor plasma (PPP) was removed leaving a platelet pellet. This pellet was resuspended in HEPES Tyrode’s (supplemented with 0.1 % glucose and 0.02 U/mL apyrase, and 10 µM indomethacin if already applied to PRP). Platelets were counted using a Z1 coulter particle counter by diluting 1 in 2000 in 10 mL MQ water. Platelets were diluted further using the supplemented HEPES Tyrode’s to a platelet concentration of 4 x 10^8^/mL and left to rest for 30 mins in a 30°C water bath.
 
 #### Integrin α~IIb~β~3~ activation and P-selectin expression measured by flow cytometry
-Washed platelets were diluted to a concentration of 2 x 10^7^/mL using supplemented HEPES Tyrode’s buffer with FITC-conjugated PAC1 and PE-conjugated CD62P antibodies in a 2:1 ratio. Platelets were incubated with 200 ng/ml MDC, TARC or vehicle for 5 mins followed by stimulation with increasing concentrations for 10 minutes. Platelets were fixed with 1 % paraformaldehyde (PFA) for 10 minutes. Plates were analysed using the BD Accuri C6 Plus flow cytometer (BD Biosciences, Wokingham, UK), where the median fluorescence intensity was derived from 10,000 gated platelets. 
+Washed platelets were diluted to a concentration of 2 x 10^7^/mL using supplemented HEPES Tyrode’s buffer with FITC-conjugated PAC1 and PE-conjugated CD62P antibodies in a 2:1 ratio, where PAC1 was present at a 1:10 volume and CD62P at 1:20. Platelets were incubated with 200 ng/ml MDC, TARC or vehicle for 5 mins followed by stimulation with increasing concentrations of PAR1-AP for 10 minutes. Platelets were fixed with a final concentration of 1 % paraformaldehyde (PFA) for 10 minutes. Plates were analysed using the BD Accuri C6 Plus flow cytometer (BD Biosciences, Wokingham, UK), where the median fluorescence intensity was derived from 10,000 gated platelets. 
 
 #### Platelet aggregation
 Platelets were diluted to a concentration of 2 x 10^8^/mL using supplemented HEPES Tyrode’s buffer. A volume of 250 µL platelets was added to aggregometer cuvettes containing a Teflon stir bar. HEPES Tyrode’s (500 µL) was added to the reference PPP (blank) channel. Platelets were left to rest in the cuvettes for 2 mins. For priming experiments, platelets were either preincubated with vehicle (MQ) or 1 µg/ml MDC or TARC for 5 mins. A Chrono-log model 490 aggregometer was used. For experiments which were not exploring platelet priming, platelets were added to the cuvettes for 2 minutes and agonist was added for 5 minutes.  Aggregation traces were derived from the amount of light transmitted through the sample. Recordings were taken for 5 minutes with a stirring speed of 1200 rpm and at 37 °C. Platelets were used within 3 hours from resting.
@@ -96,16 +96,16 @@ Platelets were diluted to a concentration of 2 x 10^8^/mL using supplemented HEP
 PRP supplemented with apyrase was used. For each donor, the platelet count was recorded. PPP was used as a reference. PRP was added to the wells of a 96 well plate and left to rest for 2 minutes. 200 ng/ml MDC, 200 ng/mL TARC or vehicle were preincubated with platelets for 5 minutes. After 5 minutes, PAR1-AP was added to the wells and the plate was shaken with an Eppendorf ThermoMixer® for 5 minutes at 1200 rpm and at 37 °C. The plate was immediately read using a Labtech LT-4500 automatic microplate absorbance reader. Responses were normalized so that basal PRP = 0 % aggregation and PPP = 100 % aggregation.
 
 #### Phosphatidylserine (PS) exposure
-Wahsed platelets were used at a concentration of 2 x 10^7^. Platelets were preincubated with vehicle, MDC or TARC. Platelets were stimulated 5 ug/mL as well as increasing concentrations of thrombin. PE-conjugated annexin V was used to bind to PS. Plates were read using the flow cytometer, where the % positive (annexin V) were recorded.
+Wahsed platelets were used at a concentration of 2 x 10^7^/mL. Platelets were preincubated with vehicle, MDC or TARC. Platelets were stimulated 5 ug/mL CRP as well as increasing concentrations of thrombin. PE-conjugated annexin V (1:10 v/v) was used to bind to PS. Plates were read using the BD Accuri flow cytometer, where the % positive (annexin V) were recorded.
 
 #### Flow cytometry: phospho-VASP
-Washed platelets were diluted to a concentration of 1 x 10^8^/mL. Platelets were left to rest in a 96 well plate for 2 minutes. 200 ng/ml MDC, 200 ng/mL TARC, 10 µM ADP or vehicle were preincubated with platelets for 5 mins at 37 °C. PGE1 (concentration-response curve) was added for a further 5 minutes. Platelets were fixed with 1 % PFA for 10 minutes. Platelets were centrifuged at 1000g for 10 minutes. Supernatant was then discarded, and platelets were permeabilized with 0.1% TritonTM X-100 for 10 minutes. The plate was centrifuged again at 1000g for 10 minutes. Supernatant was discarded and platelets were washed and resuspended with 1 x PBS. Platelets were centrifuged at 1000g for 10 minutes. Supernatant was discarded and platelets were resuspended with rabbit pSer157 VASP primary antibody (1 in 1000) for 30 minutes on ice. Platelets were centrifuged at 1000g for 10 minutes. Supernatant was discarded and platelets were washed and resuspended with 1 x PBS. Platelets were centrifuged at 1000g for 10 minutes. Supernatant was discarded and platelets were resuspended with secondary antibody (Alexa Fluor™ 647 anti-rabbit IgG, 1 in 1000) for 45 minutes on ice. Platelets were centrifuged at 1000g for 10 minutes. Supernatant was discarded and platelets were washed with 1 x PBS. Platelets were centrifuged once more at 1000g for 10 minutes and the plate was read using a BD Accuri C6 Plus flow cytometer.
+Washed platelets were diluted to a concentration of 1 x 10^8^/mL. Platelets were left to rest in a 96 well plate for 2 minutes to warm to 37 °C. 200 ng/ml MDC, 200 ng/mL TARC, 10 µM ADP or vehicle were preincubated with platelets for 5 mins at 37 °C. PGE1 (concentration-response curve) was added for a further 5 minutes. Platelets were fixed with 1 % PFA for 10 minutes. Platelets were centrifuged in a 96 well plate at 2651 rpm for 10 minutes (Heraeus Megafuge with M-20 Microplate Swinging Bucket Rotor, ThermoFisher Scientific). Supernatant was then discarded, and platelets were permeabilized with 0.1% TritonTM X-100 for 10 minutes. The plate was centrifuged again at 2651 rpm for 10 minutes. Supernatant was discarded and platelets were washed and resuspended in 1 x PBS. Platelets were centrifuged at 2651 rpm for 10 minutes. Supernatant was discarded and platelets were resuspended with rabbit pSer157 VASP primary antibody (1 in 1000) for 30 minutes on ice. Platelets were centrifuged at 2651 rpm for 10 minutes. Supernatant was discarded and platelets were washed and resuspended with 1 x PBS. Platelets were centrifuged at 2651 rpm for 10 minutes. Supernatant was discarded and platelets were resuspended with secondary antibody (Alexa Fluor™ 647 anti-rabbit IgG, 1 in 1000) for 45 minutes on ice. Platelets were centrifuged at 2651 rpm for 10 minutes. Supernatant was discarded and platelets were washed with 1 x PBS. Platelets were centrifuged once more at 2651 rpm for 10 minutes, resuspended once more in 1 x PBS and the plate was read using a BD Accuri C6 Plus flow cytometer and using the APC-A channel.
 
 #### Western blotting
-Platelets were used at a concentration of 4 x 10^8^/mL. Platelets were preincubated with 200ng/mL MDC, 200ng/mL TARC or vehicle for 5 minutes followed by 5 minutes application of PAR1-AP (all at 30 °C). For phospho-VASP assay, MDC, TARC or ADP were preincubated with platelets for 5 minutes, with PGE1 added for a further 5 minutes. After 10 minutes, platelets were lysed with 4 X LDS NuPAGE sample buffer supplemented with 50 mM dithiothreitol (DTT). Samples were stored at -20 °C. When required, samples were heated to 70 °C for 10 minutes. A 10 % Resolving gel was cast for Tris-glycine SDS-polyacrylamide gel electrophoresis, and a 5 % Stacking gel was cast for loading. As a standard, 4 µl Precision Plus protein pre-stained standard was loaded, along with 20 µl of the lysate sample. The samples were placed in a tank containing sample buffer and protein electrophoresis was carried out for 90 minutes at 100 V. Following this, proteins were transferred to a PDVF membrane in the presence of transfer buffer for 60 minutes and at 100 V. The membrane was then put in blocking buffer and 0.1 % TBS-Tween (1:1 ratio) for 1 hour. Membranes were incubated with the primary antibody (1 in 1000 dilution) at room temperature for 90 minutes. Talin was used as a loading control. The membrane was washed with 0.1 % TBS-Tween 3 times for 5 minutes. The membrane was incubated with secondary antibody (1 in 5000 dilution) for 1 hour. The membrane was washed 6 times for 5 minutes, then membranes were scanned using the LI-COR Odyssey® CLx Imaging System. Bands were quantified using Image Studio Lite. 
+Platelets were used at a concentration of 4 x 10^8^/mL. Platelets were preincubated with 200ng/mL MDC, 200ng/mL TARC or vehicle for 5 minutes followed by 5 minutes application of PAR1-AP (all at 30 °C). For phospho-VASP assay, MDC, TARC or ADP were preincubated with platelets for 5 minutes, with PGE1 added for a further 5 minutes. Platelets were lysed with 4 X LDS NuPAGE sample buffer supplemented with 50 mM dithiothreitol (DTT). Samples were stored at -20 °C. Samples were heated to 70 °C for 10 minutes prior to SDS-PAGE. A 10 % Resolving gel was cast for Tris-glycine SDS-polyacrylamide gel electrophoresis, and a 5 % Stacking gel was cast for loading. As a standard, 4 µl Precision Plus protein pre-stained standard was loaded, along with 20 µl of the lysate sample. The samples were placed in a tank containing 4-morpholinepropanesulfonic acid (MOPS) running buffer (50 mm MOPS, 50 mm Tris, 1 mm EDTA, 0.1% SDS, 5 mm sodium bisulfite) and protein electrophoresis was carried out for 90 minutes at 100 V. Following this, proteins were transferred to a poly(vinylidene fluoride) (PDVF) membrane in the presence of transfer buffer (25 mM Tris-HCl (pH 7.6), 192 mM glycine, 20% methanol) for 60 minutes and at 100 V. The membrane was then incubated in LI-COR blocking buffer with 0.1 % TBS-Tween in a 1:1 ratio for 1 hour. Membranes were incubated with the primary antibody (1 in 1000 dilution) at room temperature overnight. Talin was used as a loading control. The membrane was washed 3 times with 0.1 % TBS-Tween for 5 minutes. The membrane was incubated with Fluor680 labelled secondary antibody (1 in 5000 dilution) for 1 hour. The membrane was washed 6 times for 5 minutes, then membranes were scanned using the LI-COR Odyssey® CLx Imaging System. Bands were quantified using Image Studio Lite. 
 
 #### Calcium mobilisation
-Fura-2 (4 µM) was added to PRP after the addition of indomethacin and apyrase and left for 1 hour wrapped in foil at 37 °C. PRP was centrifuged and platelets were resuspended in supplemented HEPES Tyrode’s as described above, with the washed platelets (at 4 x 10^8^/mL) protected from the light with foil. Platelets were recalcified with 1 mM calcium chloride. Fluorescence of fura-2 was measured as the ratio at wavelengths 340:380 nm and provided a measurement of free calcium. 10 basal recordings were taken over 1 minute before addition of MDC, TARC or ADP. Upon agonist stimulation, 20 readings were taken over 2 minutes. A final concentration of 1 % Triton X-100 was added to permeabilise platelets and further readings were taken.
+Fura-2 (4 µM) was added to PRP after the addition of indomethacin and apyrase and incubated for 1 hour wrapped in foil at 37 °C. PRP was centrifuged and platelets were resuspended in supplemented HEPES Tyrode’s as described above, with washed platelets (at 4 x 10^8^/mL) protected from the light with foil. Platelets were recalcified with 1 mM calcium chloride using the Tecan Infinite M200 multimode plate reader (Mannedorf, Switzerland). Fluorescence of fura-2 was measured as the ratio at wavelengths 340:380 nm and provided a measurement of free calcium. 10 basal recordings were taken over 1 minute before addition of MDC, TARC or ADP. Upon agonist stimulation, 20 readings were taken over 2 minutes. A final concentration of 1 % Triton X-100 was added to permeabilise platelets and further readings were taken for calibration.
 
 ### Statistical analysis for platelet function assays
-Data was analysed using GraphPad Prism 8. If data displayed a normal distribution (based on Shapiro-Wilk p-value and W statistic), a parametric test was used (e.g. unpaired t-test or one way ANOVA), otherwise a nonparametric test was used. Concentration-response curves were plotted using a four parameter variable slope. To compare concentration-response curve parameters, logEC50s or curve maxes were compared. A Fisher's exact test was used to compare proportions of categorical variables. Statistical tests used for each experiment are in figure legends.
+Data was analysed using GraphPad Prism 8. If data displayed a normal distribution (based on Shapiro-Wilk p-value and W statistic), a parametric test was used (e.g. unpaired t-test or one way ANOVA), otherwise a nonparametric test was used. Concentration-response curves were plotted using a four parameter variable slope. To compare concentration-response curve parameters, pEC50s or curve maxes were compared. A Fisher's exact test was used to compare proportions of categorical variables. Statistical tests used for each experiment are in figure legends. Strength of evidence is determined by p-values, however results will not be dichotomised as either 'significant' or 'not significant' [@Sterne2001]. 
