--- a/index/04-chap4.Rmd
+++ b/index/04-chap4.Rmd
@@ -52,7 +52,7 @@ include_graphics(path = "figure/BMI_platelets/obsvMRexample.png", dpi = NA)
 
 In this study, we used data from the INTERVAL prospective cohort (N=33388) to explore the association between BMI and platelet traits. Figure \@ref(fig:BMI-platelet-overview) shows the associations of the overall thesis hypotheses that are addressed in the chapter. We combined observational and Mendelian randomization (MR) approaches to test the hypothesis that higher BMI leads to changes in platelet characteristics. Although observational studies can demonstrate associations between BMI and platelet characteristics, they cannot determine direct causality. To address the latter, we therefore employed MR, using a genetic risk score derived from single nucleotide polymorphisms (SNPs) associated with higher BMI (Figure \@ref(fig:Linear-reg-MR)). This allowed estimation of the causal effect of BMI on platelet traits, reducing the effect of confounding factors that are inherent to observational studies. To assess functional implications of BMI-platelet associations, a follow-up analysis was designed to explore the associations between platelet characteristics and whole blood aggregation in a cohort of cardiac surgery patients. 
 
-```{r BMI-platelet-overview, echo = FALSE , fig.scap="Schematic of the associations addressed in the current chapter", fig.cap="Schematic of the associations explored in the current chapter: the relationship between body mass index and platelet traits", out.width="90%"}
+```{r BMI-platelet-overview, echo = FALSE , fig.scap="Schematic of the associations addressed in the current chapter", fig.cap="Schematic of the associations explored in the current chapter: the relationship between body mass index and platelet traits. Figure made using BioRender.com.", out.width="90%"}
 include_graphics(path = "figure/BMI_platelets/Thesis_graphic_overview_BMI_platelets.png", dpi = NA)
 ```
 
