--- a/index/06-chap6.Rmd
+++ b/index/06-chap6.Rmd
@@ -33,11 +33,11 @@ source("~/OneDrive - University of Bristol/PhD/Main project/Thesis/index/package
 
 ## Background
 	
-Platelets play an important role in haemostasis [@Rivera2009]. In healthy people, prostacyclin (PGI2) and nitric oxide (NO) are released by the endothelium to suppress platelet activity [@Yau2015]. When the endothelium is damaged, platelets adhere to the injured vessel wall through the glycoprotein Ib-IXV receptor and the GPVI collagen receptor. As a result, platelets secrete alpha and dense granules and undergo shape change [@Badimon2012]. Alpha granules release growth factors (e.g. IGF-1), clotting factors and chemokines [@Gear2003], whereas dense granules release molecules such as ADP, which further activate platelets by interacting with the P2Y~1~ and P2Y~12~ platelet receptors. Platelet activation also results in activation of integrins such as α~IIb~β~3~ and subsequent fibrinogen binding results in platelet aggregation, thrombus formation and cessation of bleeding [@Rivera2009]. Despite these processes being essential for haemostasis, when platelets become hyperactive, the balance is tipped in favour of thrombosis.
+Platelets play an important role in haemostasis [@Rivera2009]. In healthy people, prostacyclin (PGI2) and nitric oxide (NO) are released by the endothelium to suppress platelet activity [@Yau2015]. When the endothelium is damaged, platelets adhere to the injured vessel wall through the glycoprotein Ib-IX-V receptor and the GPVI collagen receptor. As a result, platelets secrete α- and dense-granules and undergo shape change [@Badimon2012]. Alpha granules release growth factors (e.g. IGF-1), clotting factors and chemokines [@Gear2003], whereas dense granules release molecules such as ADP, which further activate platelets by interacting with the P2Y~1~ and P2Y~12~ platelet receptors. Platelet activation also results in activation of integrins such as α~IIb~β~3~ and subsequent fibrinogen binding results in platelet aggregation, thrombus formation and cessation of bleeding [@Rivera2009]. Despite these processes being essential for haemostasis, when platelets become hyperactive, the balance is tipped in favour of thrombosis.
 
 Platelets likely contribute to the increased CVD risk related to obesity and type II diabetes. Platelets from patients with obesity are reported to be hyperactive and have a lower sensitivity to antiplatelet therapies such as clopidogrel [@Nardin2015]. These therapies are critical in the prevention of ischaemic events. The underlying mechanism that causes platelet hyperactivity is not completely understood. It is likely to involve a combination of factors. One such factor is a decrease in the production of endothelial PGI2 and nitrous oxide [@BelindeChantemele2012a]. Another contributing factor could be an alteration in the circulating levels of soluble ligands, growth factors and cytokines which can enhance platelet function (known as platelet primers). Platelet primers are signaling molecules which enhance agonist-induced platelet function but in isolation are unable to stimulate platelet aggregation or integrin activation. Molecules that have been reported to be able to prime platelets include insulin-like growth factor-1 (IGF-1) [@Nardin2015; @Blair2015] and thrombopoietin (TPO) [@Maury2010a].
 
-Previous studies have shown that multiple platelet primers increase platelet function through activation of the lipid kinase phosphoinositide-3-kinase (PI3K) [@Blair2015; @Pasquet2000; @Falcinelli2005]. This activation leads to recruitment of PH-domain proteins including protein kinase B (PKB/AKT) to the plasma membrane. PKB is subsequently phosphorylated on Tyrosine^308^ and Serine^473^ residues leading to its activation [@Hemmings2015].  Another pathway that has been implicated in platelet priming effects is the mitogen-activated protein kinase (MAPK) pathway. TPO can enhance thromboxane A2 (TxA2) synthesis through increasing the activation of extracellular signal regulated kinase (ERK2) [@Ezumi1998; @VanWilligen2000]. The common involvement of both PI3K and MAPK pathways in platelet priming mediated by IGF-1, TPO and matrix metalloproteinase-2 (MMP-2) suggests that platelets may also be activated by other platelet primers. There are other biomarkers which are also suggested to be raised with obesity as a result of low-grade chronic inflammation [@Esser2014], including the chemokines macrophage-derived chemokine (MDC/CCL22) and thymus and activation regulated chemokine (TARC/CCL17) [@Safa2016]. The inflammatory chemokines MDC and TARC act at the receptor CCR4, which is expressed on platelets [@Clemetson2000]. These chemokines have been shown to potentiate platelet aggregation [@Gear2001]. For example, the presence of TARC and MDC have been demonstrated to greatly enhance platelet aggregation in the presence of low levels of ADP or thrombin [@Gear2001]. Furthermore, gene polymorphisms of MDC and CCR4 are associated with myocardial infarction (MI) [@Noori2018]. As blood/plasma levels of MDC have been reported to be elevated in obese people [@Safa2016] and polymorphisms of its receptor are associated with MI, understanding the mechanisms by which MDC can enhance platelet function may give us an important insight in to how platelets are hyperactive in obesity and potentially provide a novel target for new antiplatelet/thrombotic or preventative therapies for those with an increased risk of cardiovascular events.
+Previous studies have shown that multiple platelet primers increase platelet function through activation of the lipid kinase phosphoinositide-3-kinase (PI3K) [@Blair2015; @Pasquet2000; @Falcinelli2005]. This activation leads to recruitment of PH-domain proteins including protein kinase B (PKB/AKT) to the plasma membrane. PKB is subsequently phosphorylated on Threonine^308^ and Serine^473^ residues leading to its activation [@Hemmings2015].  Another pathway that has been implicated in platelet priming effects is the mitogen-activated protein kinase (MAPK) pathway. TPO can enhance thromboxane A~2~ (TxA~2~) synthesis through increasing the activation of extracellular signal regulated kinase (ERK2) [@Ezumi1998; @VanWilligen2000]. The common involvement of both PI3K and MAPK pathways in platelet priming mediated by IGF-1, TPO and matrix metalloproteinase-2 (MMP-2) suggests that platelets may also be activated by other platelet primers. There are other biomarkers which are also suggested to be raised with obesity as a result of low-grade chronic inflammation [@Esser2014], including the chemokines macrophage-derived chemokine (MDC/CCL22) and thymus and activation regulated chemokine (TARC/CCL17) [@Safa2016]. The inflammatory chemokines MDC and TARC act at the receptor CCR4, which is expressed on platelets [@Clemetson2000]. These chemokines have been shown to potentiate platelet aggregation [@Gear2001]. For example, the presence of TARC and MDC have been demonstrated to greatly enhance platelet aggregation in the presence of low levels of ADP or thrombin [@Gear2001]. Furthermore, gene polymorphisms of MDC and CCR4 are associated with myocardial infarction (MI) [@Noori2018]. As blood/plasma levels of MDC have been reported to be elevated in obese people [@Safa2016] and polymorphisms of its receptor are associated with MI, understanding the mechanisms by which MDC can enhance platelet function may give us an important insight in to how platelets are hyperactive in obesity and potentially provide a novel target for new antiplatelet/thrombotic or preventative therapies for those with an increased risk of cardiovascular events.
 
 The aims of this chapter are:
 
@@ -46,7 +46,7 @@ The aims of this chapter are:
 
 Figure \@ref(fig:chemokine-platelet-graphic) indicates the parts of the overal thesis hypthoses which are addressed in the current chapter.
 
-```{r chemokine-platelet-graphic, echo = FALSE , fig.scap="Schematic of the associations explored", fig.cap="Schematic of the associations explored: this chapter explores the effect of the chemokines MDC and TARC with platelet function and aims to explore their involvement in disease", out.width="90%"}
+```{r chemokine-platelet-graphic, echo = FALSE , fig.scap="Schematic of the associations explored", fig.cap="Schematic of the associations explored: this chapter explores the effect of the chemokines MDC and TARC on platelet function and aims to explore their involvement in disease. Figure made using BioRender.com.", out.width="90%"}
 include_graphics(path = "figure/Chemokines/Thesis_graphic_overview_chemokines.png", dpi = NA)
 ```
 
@@ -58,7 +58,7 @@ Two sample MR uses summary statistics and allows for causal effects to be estima
 
 ## Results
 
-### Priming effects of MDC and TARC on platelet aggregation in washed platelets using light transmittance aggregometry
+### Priming effects of MDC and TARC on platelet aggregation in washed platelets using light transmission aggregometry
 
 To investigate the effect of MDC and TARC on agonist-induced platelet aggregation, MDC and TARC were preincubated before addition of PAR1-AP. Figure \@ref(fig:MDC-TARC-agg)A shows an example aggregation trace from one donor where PAR1-AP and vehicle induced only shape change, but the presence of MDC and TARC induced a maximal aggregation response. A submaximal concentration of PAR1-AP (ranging from 0.7 to 1 µM) and vehicle induced a mean aggregation of 7.0 % (SEM 2.9 %) aggregation (Figure \@ref(fig:MDC-TARC-agg)B). In the presence of 1 µg/ml MDC, this aggregation increased to 33 % (SEM 13 %) (MDC v vehicle, p = 0.15). In the presence of 1 µg/ml TARC, there was 46 % (SEM 11 %) aggregation (TARC v vehicle, p < 0.05). Similar effects were observed with MDC and TARC on the area under the aggregation curve (Figure \@ref(fig:MDC-TARC-agg)C).
 
@@ -72,22 +72,21 @@ include_graphics(path = "figure/Chemokines/Layouts/MDC_TARC_aggregation_PAR1.pdf
 
 ### Priming effects of MDC and TARC on platelet aggregation in PRP
 
-Next, the priming effect of MDC and TARC was explored on platelet aggregation in PRP using plate aggregation. Plate aggregation allows exploration of more conditions than LTA, therefore full concetration-response curves can be constructed. MDC and TARC were not able to potentiate the aggregation induced by increasing concentrations of PAR1-AP (Figure \@ref(fig:MDC-TARC-agg-PRP)A). There was no difference in the pEC50 for comparing vehicle with MDC and TARC (Figure \@ref(fig:MDC-TARC-agg-PRP)B).   
+Next, the priming effect of MDC and TARC was explored on platelet aggregation in PRP using plate aggregation. Plate aggregation allows exploration of more conditions than LTA, therefore full concentration-response curves can be constructed. MDC and TARC were not able to potentiate the aggregation induced by increasing concentrations of PAR1-AP (Figure \@ref(fig:MDC-TARC-agg-PRP)A). There was no difference in the pEC50 for comparing vehicle with MDC and TARC (Figure \@ref(fig:MDC-TARC-agg-PRP)B).   
 
 (ref:scaption10) The priming effect of the chemokines MDC and TARC on PAR1-AP induced platelet aggregation in PRP using plate aggregation
-(ref:caption10) PRP supplemented with apyrase was preincubated with MDC or TARC (5 mins) before application of PAR1-AP-and aggregation induced by a plate shaker (5 mins). A) A concentration response curve of the effect of vehicle, 200 ng/mL MDC or 200 ng/mL TARC on PAR1-AP induced aggregation. N=7. B) A bar chart of the pEC50s of the PAR1-AP concentration response curve in the presence of vehicle, MDC or TARC. Results analysed using a repeated measures one-way ANOVA with Dunnett's multiple comparisons. N=7.
+(ref:caption10) PRP supplemented with apyrase was preincubated with MDC or TARC (5 mins) before application of PAR1-AP and aggregation induced by a plate shaker (5 mins). A) Concentration-response curves of the effect of vehicle, 200 ng/mL MDC or 200 ng/mL TARC on PAR1-AP induced aggregation. N=7. B) Bar chart of the pEC50s of the PAR1-AP concentration response curve in the presence of vehicle, MDC or TARC. Results analysed using a repeated measures one-way ANOVA with Dunnett's multiple comparisons. N=7.
 ```{r MDC-TARC-agg-PRP, echo = FALSE, fig.cap="(ref:caption10)", fig.scap= "(ref:scaption10)"}
 include_graphics(path = "figure/Chemokines/Layouts/MDC_TARC_PRP_plate_agg.pdf", dpi = NA)
 
 ```
 
-### Priming effects of MDC and TARC on PAR1-AP induced integrin α~IIbβ~3~ activation and P-selectin expression
+### Priming effects of MDC and TARC on PAR1-AP induced integrin α~IIb~β~3~ activation and P-selectin expression
 
-When a platelet becomes activated by an agonist, the integrin α~IIb~β~3~ changes confirmation and is exposed on the membrane of the platelet. This allows fibrinogen to bind and aggregation to occur. P-selectin is also expressed on the membrane as a result of stimulation and is a marker of alpha granule secretion. To assess whether MDC and TARC affect integrin α~IIb~β~3~ activation and P-selectin expression, washed platelets were incubated with vehicle, 200 ng/ml MDC or TARC prior to PAR-AP stimulation. MDC enhanced integrin α~IIb~β~3~ activation, with a leftward shift in the PAR1-AP concentration response curve (pEC50= -5.54 M (SEM 0.10 M) to -5.66 M (SEM 0.08 M), p=0.02). Preincubation with TARC had the same effect as MDC, left shifting the concentration-response curve (pEC50 = -5.54 M (SEM 0.11 M) to -5.64 M (SEM 0.11 M), p=0.01, Figure \@ref(fig:MDC-TARC-integrin-pselectin)A). MDC and TARC did not cause a significant increase in the maximal integrin activation. As the concentration of PAR1-AP applied to the platelets increased, the amount of P-selectin exposed increased and therefore there was an increase in the MFI. The pEC50 for the PAR1-AP effect on P-selectin expression was -5.36 (SEM 0.07) (Figure \@ref(fig:MDC-TARC-integrin-pselectin)B). Preincubation with 200 ng/ml MDC caused a small leftward shift in pEC50 to -5.44 (SEM 0.07) (MDC v vehicle, p=0.006), but preincubation with 200 ng/ml TARC did not alter the sensitivity to PAR1-AP. Together these results show that MDC and TARC are able to potentiate platelet activation mainly through activating the integrin α~IIb~β~3~. In the absence of PAR1-AP, both MDC and TARC had a weak effect on integrin α~IIb~β~3~ activation: increasing basal levels from a median fluorescence intensity (MFI) of 161 (SEM 20) to 222 (SEM 27) (vehicle v MDC, p=0.006) and to 285 ± 36 (vehicle v TARC, p=0.007) respectively (Figure \@ref(fig:MDC-TARC-integrin-pselectin)C). This effect was specific to the integrin α~IIbβ~3~ as it was not seen with P-selectin.
-
+When a platelet becomes activated by an agonist, the integrin α~IIb~β~3~ changes confirmation and is exposed on the membrane of the platelet. This allows fibrinogen to bind and aggregation to occur. P-selectin is also expressed on the membrane as a result of stimulation and is a marker of alpha granule secretion. To assess whether MDC and TARC affect integrin α~IIb~β~3~ activation and P-selectin expression, washed platelets were incubated with vehicle, 200 ng/ml MDC or TARC prior to PAR-AP stimulation. MDC enhanced integrin α~IIb~β~3~ activation, with a leftward shift in the PAR1-AP concentration response curve (pEC50= -5.54 M (SEM 0.10 M) to -5.66 M (SEM 0.08 M), p=0.02). Preincubation with TARC had the same effect as MDC, left shifting the concentration-response curve (pEC50 = -5.54 M (SEM 0.11 M) to -5.64 M (SEM 0.11 M), p=0.01, Figure \@ref(fig:MDC-TARC-integrin-pselectin)A). MDC and TARC did not cause a significant increase in the maximal integrin activation. As the concentration of PAR1-AP applied to the platelets increased, the amount of P-selectin exposed increased and therefore there was an increase in the MFI. The pEC50 for the PAR1-AP effect on P-selectin expression was -5.36 (SEM 0.07) (Figure \@ref(fig:MDC-TARC-integrin-pselectin)B). Preincubation with 200 ng/ml MDC caused a small leftward shift in pEC50 to -5.44 (SEM 0.07) (MDC v vehicle, p=0.006), but preincubation with 200 ng/ml TARC did not alter the sensitivity to PAR1-AP. Together these results show that MDC and TARC are able to potentiate platelet activation mainly through integrin α~IIb~β~3~. In the absence of PAR1-AP, both MDC and TARC had a weak effect on integrin α~IIb~β~3~ activation: increasing basal levels from a median fluorescence intensity (MFI) of 161 (SEM 20) to 222 (SEM 27) (vehicle v MDC, p=0.006) and to 285 ± 36 (vehicle v TARC, p=0.007) respectively (Figure \@ref(fig:MDC-TARC-integrin-pselectin)C). This effect was specific to integrin α~IIbβ~3~ as it was not seen with P-selectin.
 
 (ref:scaption3) The priming effect of the chemokines MDC and TARC on PAR1-AP induced α~IIb~β~3~ activation and P-selectin expression
-(ref:caption3) Washed platelets at 2x10^7^/mL supplemented with PGE1 and apyrase were preincubated with MDC or TARC (5 mins) before application of PAR1-AP (5 mins). Integrin α~IIb~β~3~ activation and P-selectin expression were measured using flow cytometry. A) The effect of vehicle, 200 ng/mL MDC or 200 ng/mL TARC on PAR1-AP induced α~IIb~β~3~ activation measured as the median fluorescence intensity (AU). B) The effect of vehicle, MDC or TARC on PAR1-AP induced P-selectin expression measured using median fluorescence intensity (AU). pEC50s compared using a one-way ANOVA with Dunnett's multiple comparisons in Table \@ref(tab:chemokines-integrin-pselectin) C) MDC and TARC alone increase integrin αIIbβ3 activation. Mean + SEM displayed. N=4.
+(ref:caption3) Washed platelets at 2x10^7^/mL supplemented with PGE1 and apyrase were preincubated with MDC or TARC (5 mins) before application of PAR1-AP (5 mins). Integrin α~IIb~β~3~ activation and P-selectin expression were measured using flow cytometry. A) The effect of vehicle, 200 ng/mL MDC or 200 ng/mL TARC on PAR1-AP induced α~IIb~β~3~ activation measured as the median fluorescence intensity (AU). B) The effect of vehicle, MDC or TARC on PAR1-AP induced P-selectin expression measured using median fluorescence intensity (AU). pEC50s compared using a one-way ANOVA with Dunnett's multiple comparisons in Table \@ref(tab:chemokines-integrin-pselectin) C) MDC and TARC alone increase integrin α~IIb~β~3~ activation. Mean + SEM displayed. N=4.
 ```{r MDC-TARC-integrin-pselectin, echo = FALSE, out.width="85%", fig.cap="(ref:caption3)", fig.scap= "(ref:scaption3)"}
 include_graphics(path = "figure/Chemokines/Layouts/P-selectin_integrin_MDC_TARC.pdf", dpi = NA)
 
@@ -110,12 +109,12 @@ mytable %>% kable(caption = "Comparison of the effect of MDC and TARC on the pEC
   landscape()
 ```
 
-### Effects of MDC and TARC on PAR1-AP induced PS exposure
+### Effects of MDC and TARC on PS exposure
 
-When a platelet is activated by strong agonists, such as dual stimiluation by CRP and thrombin, PS is transcolated from the inner platelet membrane to the outer, thereby facilitating coagulation [@Reddy2020]. MDC and TARC did not affect the overall percentage of annexin V positive platelets induced by CRP and thrombin (Figure \@ref(fig:MDC-TARC-PS-exposure)).
+When a platelet is activated by strong agonists, such as dual stimulation by collagen-related peptide (CRP) and thrombin, PS is translocated from the inner platelet membrane to the outer, thereby facilitating coagulation by providing binding sites for prothrombinase complex and supporting thrombin generation [@Reddy2020]. MDC and TARC did not affect the overall percentage of annexin V positive platelets induced by CRP and thrombin (Figure \@ref(fig:MDC-TARC-PS-exposure)).
 
 (ref:scaption4) The effect of the chemokines MDC and TARC on PAR1-AP induced PS exposure
-(ref:caption4) A) Washed platelets at 2x10^7^/mL supplemented with indomethacin and apyrase were preincubated with vehicle, 200ng/mL MDC or 200 ng/mL TARC (5 mins) before application of increasing concentrations of PAR1-AP (10 mins). PS exposure was measured using flow cytometry (N=4). B) Bar chart comparing the effect of vehicle, MDC or TARC on the pEC50s (M) of PAR1-AP induced PS exposure. pEC50s were compared by a Friedman's test.
+(ref:caption4) A) Washed platelets at 2x10^7^/mL supplemented with indomethacin and apyrase were preincubated with vehicle, 200ng/mL MDC or 200 ng/mL TARC (5 mins) before application of CRP and increasing concentrations of thrombin (10 mins). PS exposure was measured using flow cytometry (N=4). B) Bar chart comparing the effect of vehicle, MDC or TARC on the pEC50s (M) of thrombin induced PS exposure. pEC50s were compared by a Friedman's test.
 ```{r MDC-TARC-PS-exposure, echo = FALSE, fig.cap="(ref:caption4)", fig.scap= "(ref:scaption4)"}
 include_graphics(path = "figure/Chemokines/Layouts/MDC_TARC_PS_exposure_layout.pdf", dpi = NA)
 
@@ -123,10 +122,10 @@ include_graphics(path = "figure/Chemokines/Layouts/MDC_TARC_PS_exposure_layout.p
 
 ### Effects of MDC and TARC alone on aggregation in washed platelets 
 
-MDC and TARC were applied to washed platelets to determine whether they exert effects on platelet aggregation in the absence of an agonist. MDC and TARC did not cause platelet aggregation, however they did cause an upward deflection on the aggregation trace (Figure \@ref(fig:MDC-TARC-wp-alone-aggregation)). This upward deflection is a reduction in light passing through the sample, indicating that the platelets are undergoing shape change.
+MDC and TARC were applied to washed platelets to determine whether they exert effects on platelet aggregation in the absence of an agonist. MDC and TARC did not cause platelet aggregation, however they did cause an upward deflection on the aggregation trace (Figure \@ref(fig:MDC-TARC-wp-alone-aggregation)). This upward deflection is a reduction in light passing through the sample, indicating that the platelets may be undergoing shape change.
 
 (ref:scaption8) The effect of the chemokines MDC and TARC alone on aggregation in washed platelets
-(ref:caption8) A-C) Washed platelets at 2x10^8^/mL supplemented with PGE1 and apyrase were stimulated with vehicle, 200ng/mL MDC, 200 ng/mL TARC or 1 uM PAR1-AP (5 mins). Aggregation was measured using light transmittance aggregometry. Each graph is a representative trace from a separate donor
+(ref:caption8) A-C) Washed platelets at 2x10^8^/mL supplemented with PGE1 and apyrase were stimulated with vehicle, 200ng/mL MDC, 200 ng/mL TARC or 1 uM PAR1-AP (5 mins). Aggregation was measured using light transmission aggregometry. Each graph is a representative trace from a separate donor
 ```{r MDC-TARC-wp-alone-aggregation, out.width="90%", echo = FALSE, fig.cap="(ref:caption8)", fig.scap= "(ref:scaption8)"}
 include_graphics(path = "figure/Chemokines/Layouts/MDC_TARC_alone_wp_aggregation.pdf", dpi = NA)
 
@@ -134,7 +133,7 @@ include_graphics(path = "figure/Chemokines/Layouts/MDC_TARC_alone_wp_aggregation
 
 ### Effects of MDC and TARC alone on calcium mobilisation
 
-Calcium mobilisation was measured by using a fluorescent dye, Fura-2, which binds to intracellular calcium. Increasing concentrations were added to washed platelets as a positive control, where increasing calcium mobilisation was observed (\@ref(fig:MDC-TARC-wp-calcium)A). MDC and TARC alone were also able to increase calcium mobilisation in a concentration-dependent manner (\@ref(fig:MDC-TARC-wp-calcium)B), however caused a much smaller calcium response than ADP. 
+Calcium mobilisation was measured by using a fluorescent dye, Fura-2, which binds to intracellular calcium. Increasing concentrations of ADP were added to washed platelets as a positive control, where increasing calcium mobilisation was observed (\@ref(fig:MDC-TARC-wp-calcium)A). MDC and TARC alone were also able to increase calcium mobilisation in a concentration-dependent manner (\@ref(fig:MDC-TARC-wp-calcium)B), however caused a much smaller calcium response than ADP. 
 
 (ref:scaption9) The effect of ADP and the chemokines MDC and TARC alone on calcium mobilisation in washed platelets.
 (ref:caption9) Washed platelets at 2x10^8^/mL supplemented with indomethacin and apyrase were loaded with Fura-2. Platelets were stimulated with increasing concentrations of A) ADP or B) 200ng/mL MDC or 200 ng/mL TARC. Area under curve represents the free calcium and is ratio of fluorescence at wavelengths 340:380 nm.
@@ -144,11 +143,11 @@ include_graphics(path = "figure/Chemokines/Layouts/MDC_TARC_calcium_wp.pdf", dpi
 ```
 
 ### Mechanism of MDC and TARC priming in washed platelets
-MDC and TARC activate the platelet receptor CCR4, which can reportedly couple to G~i/o~. PGE~1~ inhibits platelets by acting at a G~s~ coupled receptor, thereby increasing levels of cAMP. One mechanism by which MDC and TARC may therefore increase platelet function is by activating the G~i~ pathway, which would oppose cAMP inhibition of platelet function. ADP acts at the P2Y12 receptor which is G~i/o~ coupled, therefore it reduces PGE~1~ induced VASP phosphorylation. To explore whether MDC and TARC activate G~i~ signaling, the effect of MDC and TARC on VASP phosphorylation in the presence and absence of PGE~1~ was explored. PGE~1~ increased the phosphorylation of VASP at both Ser^157^ and Ser^239^. Figure \@ref(fig:MDC-TARC-wp-WB-VASP) shows a representative blot from one donor. There was little evidence for an effect of MDC, TARC and ADP reducing basal VASP levels (Figure \@ref(fig:MDC-TARC-wp-WB-VASP)A, C). As a positive control, ADP (10 µM) reduced the phosphorylation of VASP induced by 100 nM PGE~1~ at both Ser^239^ by 62 % SEM (18 %) (ADP v vehicle, p=0.048, Figure \@ref(fig:MDC-TARC-wp-WB-VASP)B) and at Ser^157^ by 44 % (SEM 21 %) (ADP v vehicle, p=0.048, Figure \@ref(fig:MDC-TARC-wp-WB-VASP)D). In contrast, there was not strong evidence that MDC and TARC reduced the phosphorylation of VASP induced by 100 nM PGE1 at Ser^239^ or at Ser^157^ (Figures \@ref(fig:MDC-TARC-wp-WB-VASP)B, D). This was also true for 10 nM and 30 nM PGE1 (data not shown). Phospho-VASP at Ser^157^ was also measured using flow cytometry (Figure \@ref(fig:MDC-TARC-VASP-FACS)). PGE~1~ increased phosphorylation of VASP in a concentration-dependent manner, with a pEC50 of -8.36 M (SEM 0.16 M). Pre-incubation with ADP shifted this response to the right to give a pEC50 of -6.95 M (SEM 0.17 M) (ADP v vehicle, p=0.002). MDC and TARC did not alter the PGE1 phosphorylation of VASP. Together, these results indicate that MDC and TARC do not signal through G~i~-coupled receptors in human platelets, or too weakly to detect using Western blotting or flow cytometry.
+MDC and TARC activate the platelet receptor CCR4, which can reportedly couple to G~i/o~. PGE~1~ inhibits platelets by acting at a G~s~ coupled receptor, thereby increasing levels of cAMP and activating protein kinase A (PKA). PKA subsequently phosphorylates cAMP. One mechanism by which MDC and TARC may therefore increase platelet function is by activating the G~i~ pathway, which would oppose cAMP inhibition of platelet function. ADP acts at the P2Y~12~ receptor which is G~i/o~ coupled, therefore it reduces PGE~1~ induced VASP phosphorylation. To explore whether MDC and TARC activate G~i~ signaling, the effect of MDC and TARC on VASP phosphorylation in the presence and absence of PGE~1~ was explored. PGE~1~ increased the phosphorylation of VASP at both Ser^157^ and Ser^239^. Figure \@ref(fig:MDC-TARC-wp-WB-VASP) shows a representative blot from one donor. There was little evidence for an effect of MDC, TARC and ADP reducing basal VASP levels (Figure \@ref(fig:MDC-TARC-wp-VASP-bar)A, C). As a positive control, ADP (10 µM) reduced the phosphorylation of VASP induced by 100 nM PGE~1~ at both Ser^239^ by 62 % SEM (18 %) (ADP v vehicle, p=0.048, Figure \@ref(fig:MDC-TARC-wp-VASP-bar)B) and at Ser^157^ by 44 % (SEM 21 %) (ADP v vehicle, p=0.048, Figure \@ref(fig:MDC-TARC-wp-VASP-bar)D). In contrast, there was not strong evidence that MDC and TARC reduced the phosphorylation of VASP induced by 100 nM PGE1 at Ser^239^ or at Ser^157^ (Figures \@ref(fig:MDC-TARC-wp-VASP-bar)B, D). This was also true for 10 nM and 30 nM PGE1 (data not shown). Phospho-VASP at Ser^157^ was also measured using flow cytometry (Figure \@ref(fig:MDC-TARC-VASP-FACS)). PGE~1~ increased phosphorylation of VASP in a concentration-dependent manner, with a pEC50 of -8.36 M (SEM 0.16 M). Pre-incubation with ADP shifted this response to the right to give a pEC50 of -6.95 M (SEM 0.17 M) (ADP v vehicle, p=0.002). MDC and TARC did not alter the PGE1 phosphorylation of VASP. Together, these results indicate that MDC and TARC do not signal through G~i~-coupled receptors in human platelets, or too weakly to detect using Western blotting or flow cytometry.
 
 
 (ref:scaption6) A representative blot of the effect of MDC, TARC and ADP on PGE~1~ stimulated phospho-VASP.
-(ref:caption6) A representative blot of the effect of 200 ng/mL MDC, 200 ng/mL TARC and 10 uM ADP on phospho-VASP at Serine^157^ and Serine^239^ in the presence of increasing concentrations of PGE~1~.
+(ref:caption6) A representative blot of the effect of 200 ng/mL MDC, 200 ng/mL TARC and 10 uM ADP on phospho-VASP at Serine^157^ and Serine^239^ in the presence of increasing concentrations of PGE~1~ which is quantified in \@ref(fig:MDC-TARC-wp-VASP-bar).
 
 ```{r MDC-TARC-wp-WB-VASP, echo = FALSE, out.width="60%", fig.cap="(ref:caption6)", fig.scap= "(ref:scaption6)"}
 include_graphics(path = "figure/Chemokines/MDC_TARC_VASP_blot.pdf", dpi = NA)
@@ -173,9 +172,9 @@ include_graphics(path = "figure/Chemokines/Layouts/MDC_TARC_VASP_FACS_logec50.pd
 
 ### Mechanisms of the effect of MDC on platelet aggregation in PRP
 
-The mechanism by which these chemokines cause platelet aggregation in PRP was further characterised just using MDC. MDC-induced platelet aggregation was explored using various inhibitors. To test that the antagonists used were specific, they were first applied to PAR1-AP. The G~q~ inhibitor YM-254890 inhibited PAR1-AP induced platelet aggregation, but the CCR4 antagonist AZD-2098 and G~i~ antagonist did not affect PAR1-AP platelet aggregation (Figures \@ref(fig:MDC-PRP-agg-bar)A, B). Y27632 inhibited the G~12/13~ mediated shape change induced by low concentrations of PAR1-AP (0.75 uM) due inhibiting rho-associated protein kinase (ROCK) (data not shown). 
+The mechanism by which these chemokines cause platelet aggregation in PRP was further characterised just using MDC. MDC-induced platelet aggregation was explored using various inhibitors. To test that the antagonists used were specific, they were first applied to PAR1-AP. The G~q~ inhibitor YM-254890 inhibited PAR1-AP induced platelet aggregation, but the CCR4 antagonist AZD-2098 did not affect PAR1-AP platelet aggregation (Figures \@ref(fig:MDC-PRP-agg-bar)A, B). Y27632 inhibited the G~12/13~ mediated shape change induced by low concentrations of PAR1-AP (0.75 uM) due inhibiting rho-associated protein kinase (ROCK) (data not shown). 
 
-The effects of these inhibitors on MDC-induced aggregation was then explored. MDC by itself was able to consistently cause over 60% aggregation in PRP. The CCR4 inhibitor AZD-2098 was able to reduce this aggregation, but only at 50 uM (Figures\@ref(fig:MDC-PRP-agg-bar)C, \@ref(fig:MDC-PRP-agg-trace)A, B). The G~q~ inhibitor YM-254890 was able to reduce the maximum aggregation induced by MDC (Figure \@ref(fig:MDC-PRP-agg-bar)C, Figure \@ref(fig:MDC-PRP-agg-trace)C), suggesting CCR4 couples to G~q~. Y27632 did not affect aggregation induced by MDC, suggesting that this aggregation is not dependent on G~12/13~ and ROCK (Figure \@ref(fig:MDC-PRP-agg-bar)D, \@ref(fig:MDC-PRP-agg-trace)D).
+The effects of these inhibitors on MDC-induced aggregation were then explored. MDC by itself was able to consistently cause over 60% aggregation in PRP. The CCR4 inhibitor AZD-2098 was able to reduce this aggregation, but only at 50 uM (Figures \@ref(fig:MDC-PRP-agg-bar)C, \@ref(fig:MDC-PRP-agg-trace)A, B). The G~q~ inhibitor YM-254890 was able to reduce the maximum aggregation induced by MDC (Figure \@ref(fig:MDC-PRP-agg-bar)C, Figure \@ref(fig:MDC-PRP-agg-trace)C), suggesting CCR4 couples to G~q~. Y27632 did not affect aggregation induced by MDC, suggesting that this aggregation is not dependent on G~12/13~ and ROCK (Figure \@ref(fig:MDC-PRP-agg-bar)D, \@ref(fig:MDC-PRP-agg-trace)D). Application of MDC to PRP did not cause shape change.
 
 (ref:scaption12) The effect of inhibitors on PAR1-AP and MDC induced aggregation in PRP.
 (ref:caption12) Platelet rich plasma (PRP) supplemented with apyrase was incubated for 5 minutes with the antagonist indicated, followed by stimulation by PAR1-AP or MDC. A) Effect of 10 uM AZD-2098 (CCR4 antagonist) on maximal aggregation induced by PAR1-AP B) Effect of 10 uM YM-254890 (G~q~ inhibitor) on maximal aggregation induced by PAR1-AP C) Effect of AZD-2098 and YM-254890 on aggregation induced by 200 ng/mL MDC D) Effect of the ROCK inhibitor Y27632 on aggregation induced by 200 ng/mL MDC Results are analysed with a paired two-tailed t-test or repeated measures one-way ANOVA with Dunnett's Multiple comparisons. N=3-5.
@@ -187,7 +186,7 @@ include_graphics(path = "figure/Chemokines/Layouts/PAR1_MDC_inhibitors_aggregati
 
 
 (ref:scaption11) Aggregation traces of the effect of inhibitors on MDC induced platelet aggregation in PRP.
-(ref:caption11) Representative aggregation traces of platelet rich plasma (PRP) supplemented with apyprase, incubated with A) 10 uM CCR4 antagonist AZD-2098 B) 50 uM AZD-2098 C) 10 uM G~q~ inhibitor YM-254890 D) 10 uM ROCK inhibitor Y27632, followed by addition of 200 ng/mL MDC.
+(ref:caption11) Representative aggregation traces of platelet rich plasma (PRP) supplemented with apyrase, incubated with A) 10 uM CCR4 antagonist AZD-2098 B) 50 uM AZD-2098 C) 10 uM G~q~ inhibitor YM-254890 D) 10 uM ROCK inhibitor Y27632, followed by addition of 200 ng/mL MDC.
 
 ```{r MDC-PRP-agg-trace, echo = FALSE, out.width="95%", fig.cap="(ref:caption11)", fig.scap= "(ref:scaption11)"}
 include_graphics(path = "figure/Chemokines/Layouts/MDC_inhibitors_aggregation_traces.pdf", dpi = NA)
@@ -251,7 +250,7 @@ As well as confirming previous findings, this chapter provided some novel observ
 
 Platelets express chemokine receptors as they are also key cells in inflammation and host defense [@Clemetson2000]. MDC and TARC can also cause activation of platelets, thereby demonstrating the close link between inflammation and haemostasis [@Gear2003].
 
-As well as functional effects, this chapter aimed to assess whether effects are due to the CCR4 receptor and the downstream signalling involved. It has been reported that MDC inhibits calcium currents in HEK293 cells and barium currents dorsal root ganglia neurones and is therefore G~i/o~ coupled [@Oh2002]. MDC and TARC were not able to reduce VASP phosphorylation induced by PGE1, suggesting that the effects are not via G~i/o~ in platelets. It is possible that this experiment was not sensitive enough to detect the reduction in VASP phosphorylation. Another study suggested that CCR4 is coupled to G~q~ due to the calcium response observed by MDC [@Kowalska2000]. Inhibiting G~q~ coupling in the current study inhibited the aggregation induced by MDC. It is therefore likely that CCR4 couples to G~q~.
+As well as functional effects, this chapter aimed to assess whether effects are due to the CCR4 receptor and the downstream signalling involved. It has been reported that MDC inhibits calcium currents in HEK293 cells and barium currents dorsal root ganglia neurones and is therefore G~i/o~ coupled [@Oh2002]. MDC and TARC were not able to reduce VASP phosphorylation induced by PGE1, suggesting that the effects are not via G~i/o~ in platelets. It is possible that this experiment was not sensitive enough to detect the reduction in VASP phosphorylation, as ADP did not reduce VASP levels as much as previous reports [@Hezard2005]. Another study suggested that CCR4 is coupled to G~q~ due to the calcium response observed by MDC [@Kowalska2000]. Inhibiting G~q~ coupling in the current study inhibited the aggregation induced by MDC. It is therefore likely that CCR4 couples to G~q~.
 
 MDC and TARC have been implicated in cardiovascular disease such as atherosclerosis [@Weber2004], but experiments focusing on the effect of MDC and TARC on platelet function have not used genetic epidemiology to explore whether genetic variants which lead to alterations in the levels of circulating MDC and TARC in the plasma are associated with an increased risk of disease. As MDC and TARC can activate platelets, the effect of MDC and TARC on disease was explored using two sample MR. The SNP that was associated with levels of MDC, rs77542162, was also associated with increased risk of DVT and pulmonary embolism. This effect may occur due to increased platelet priming by higher levels of MDC. Despite the evidence for a causal effect, it is possible that this SNP could affect the outcome through routes other than through the exposure (horizontal pleiotropy). This is also reflected by other outcomes being related to increased levels of MDC such as forced vital capacity (FVC). As there is only one SNP, sensitivity analyses cannot be performed to test this. Further analyses such as a colocalisation analysis could help determine whether the relationship between MDC and DVT/PE is causal as this method estimates whether an exposure and an outcome share a causal top signal in a particular genomic region [@Giambartolomei2014].
 
@@ -259,7 +258,7 @@ In efforts to determine whether levels of MDC or TARC are affected by BMI, a one
 
 ### Conclusions
 
-Overall, this chapter provided evidence that the chemokines MDC and TARC potentiate platelet aggregation induced by PAR1-AP. On their own in washed platelets, a small calcium response can be observed as well as shape change, but PRP is required to see full aggregation. Signalling experiments suggest MDC and TARC act at the CCR4 receptor on platelets, and that G~q~ coupling is responsible for the functional effects observed. There was evidence that higher MDC may have a causal effect on DVT and PE. MDC may therefore be a biomarker for venous thromboembolism. Further work is required to determine signalling, and further cohort studies would be useful to confirm effects of MDC on DVT and PE.
+Overall, this chapter provided evidence that the chemokines MDC and TARC potentiate platelet aggregation induced by PAR1-AP. On their own in washed platelets, a small calcium response can be observed as well as shape change, but PRP is required to observe full aggregation. Signalling experiments suggest MDC and TARC act at the CCR4 receptor on platelets, and that G~q~ coupling is responsible for the functional effects observed. There was evidence that higher MDC may have a causal effect on DVT and PE. MDC may therefore be a biomarker for venous thromboembolism. Further work is required to determine signalling, and further cohort studies would be useful to confirm effects of MDC on DVT and PE.
 
 
 
